# was_affine

./: .gitignore  LICENSE  README.md  __init__.py  affine_nodes.py  nodes.py  option_nodes.py  pyproject.toml  usdu.py  utils.py
modules/: usdu.py  utils.py
nodes/: __init__.py  affine_nodes.py  extra_nodes.py  option_nodes.py  usdu_nodes.py
workflows/: custom_sampling_and_usdu.json  krea_fp8_2k_affine_simple_workflow.json  ksampler_affine_comparison.json  video_wan2_2_14B_t2v_affine_simple_workflow.json  wan2-2_video_upscale.json
